# noMITM

./: CMakeLists.txt
include/: Communication.hpp  Crypto.hpp  KeyManagement.hpp  Logger.hpp  NetworkStack.hpp  OCSP.hpp  Protocol.hpp  SecureTypes.hpp  Utils.hpp
src/: Communication.cpp  Crypto.cpp  KeyManagement.cpp  Logger.cpp  Main.cpp  NetworkStack.cpp  OCSP.cpp  Utils.cpp
